--- a/index.html
+++ b/index.html
@@ -836,5 +836,8 @@ Columna I: qr_generated (Booleano) - Si ya se generó QR</div>
     // Ejecutar al cargar
     window.addEventListener('DOMContentLoaded', loadConfig);
 </script>
+</body>
+</html>
+
 
 
