--- a/index.html
+++ b/index.html
@@ -1,170 +1,120 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Inventario Eléctrico</title>
   <style>
     body {
-      background-color: #002244;
-      color: white;
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      padding: 1rem;
-      background-color: #001830;
-      text-align: center;
-      font-size: 2rem;
-      font-weight: bold;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      margin: 1rem 0;
-    }
-    nav button {
-      padding: 0.5rem 1rem;
-      background-color: #0055aa;
+      background-color: #003366;
       color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
+      padding: 20px;
     }
-    nav button:hover {
-      background-color: #0077cc;
+    h1 {
+      text-align: center;
     }
-    section {
-      display: none;
-      padding: 1rem 2rem;
-    }
-    section.active {
-      display: block;
-    }
-    input, select {
-      padding: 0.5rem;
-      margin: 0.5rem 0;
-      width: 100%;
-      max-width: 400px;
+    form {
+      margin-bottom: 30px;
+      border: 1px solid white;
+      padding: 15px;
+      border-radius: 10px;
     }
     label {
       display: block;
-      margin-top: 1rem;
+      margin-top: 10px;
     }
-    .btn-submit {
-      margin-top: 1rem;
-      background-color: #00bbff;
-      border: none;
-      padding: 0.5rem 1rem;
-      color: #000;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .btn-submit:hover {
-      background-color: #33ccff;
-    }
-    table {
+    input, select, button {
+      padding: 8px;
+      margin-top: 5px;
       width: 100%;
-      max-width: 600px;
-      border-collapse: collapse;
-      margin-top: 1rem;
+      border-radius: 5px;
+      border: none;
     }
-    th, td {
-      border: 1px solid white;
-      padding: 0.5rem;
-      text-align: left;
-    }
-    th {
-      background-color: #003366;
+    button {
+      background-color: #0055aa;
+      color: white;
+      margin-top: 15px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <header>Inventario Eléctrico</header>
+  <h1>📦 Inventario Eléctrico</h1>
 
-  <nav>
-    <button onclick="showSection('add')">➕ Añadir Material</button>
-    <button onclick="showSection('remove')">➖ Remover Material</button>
-    <button onclick="showSection('view')">📦 Ver Inventario</button>
-  </nav>
+  <!-- Añadir material -->
+  <form id="add-form">
+    <h2>➕ Añadir Material</h2>
+    <label>Código del Material:</label>
+    <input type="text" id="add-code" required>
+    <label>Nombre:</label>
+    <input type="text" id="add-name" required>
+    <label>Cantidad:</label>
+    <input type="number" id="add-qty" required>
+    <button type="submit">Agregar</button>
+  </form>
 
-  <section id="add" class="active">
-    <h2>Añadir Material</h2>
-    <form onsubmit="sendToN8N(event, 'create')">
-      <label>Código del material</label>
-      <input type="text" name="item_code" required />
-      <label>Nombre</label>
-      <input type="text" name="item_name" required />
-      <label>Categoría</label>
-      <input type="text" name="category" />
-      <label>Cantidad inicial</label>
-      <input type="number" name="quantity" required />
-      <label>Unidad</label>
-      <input type="text" name="unit" />
-      <label>Ubicación</label>
-      <input type="text" name="location" />
-      <label>Stock mínimo</label>
-      <input type="number" name="min_stock" value="5" />
-      <button class="btn-submit" type="submit">Enviar</button>
-    </form>
-  </section>
+  <!-- Remover material -->
+  <form id="remove-form">
+    <h2>➖ Remover Material</h2>
+    <label>Código del Material:</label>
+    <input type="text" id="remove-code" required>
+    <label>Cantidad a Remover:</label>
+    <input type="number" id="remove-qty" required>
+    <button type="submit">Remover</button>
+  </form>
 
-  <section id="remove">
-    <h2>Remover Material</h2>
-    <form onsubmit="sendToN8N(event)">
-      <label>Código del material</label>
-      <input type="text" name="item_code" required />
-      <input type="hidden" name="action" value="remove" />
-      <label>Cantidad</label>
-      <input type="number" name="quantity" required />
-      <label>Notas</label>
-      <input type="text" name="notes" />
-      <button class="btn-submit" type="submit">Remover</button>
-    </form>
-  </section>
-
-  <section id="view">
-    <h2>Inventario (Vista rápida local)</h2>
-    <table id="inventory-table">
-      <thead>
-        <tr>
-          <th>Código</th>
-          <th>Nombre</th>
-          <th>Cantidad</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </section>
+  <!-- Ver inventario (por ahora en consola) -->
+  <form id="view-form">
+    <h2>📋 Ver Inventario</h2>
+    <button type="submit">Ver en consola</button>
+  </form>
 
   <script>
-    const webhookUrl = 'https://n8n.automatedflow.net/webhook/inventory';
+    const webhookUrl = "https://n8n.automatedflow.net/webhook/inventory";
 
-    function showSection(id) {
-      document.querySelectorAll('section').forEach(s => s.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
-    }
+    // Añadir material
+    document.getElementById("add-form").addEventListener("submit", async function(e) {
+      e.preventDefault();
+      const payload = {
+        action: "create",
+        item_code: document.getElementById("add-code").value.toUpperCase(),
+        nombre: document.getElementById("add-name").value,
+        quantity: parseInt(document.getElementById("add-qty").value),
+        last_updated: new Date().toISOString()
+      };
+      await fetch(webhookUrl, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(payload)
+      });
+      alert("✅ Material agregado");
+      this.reset();
+    });
 
-    function sendToN8N(event, forceAction = null) {
-      event.preventDefault();
-      const form = event.target;
-      const data = Object.fromEntries(new FormData(form).entries());
-      data.action = forceAction || data.action || 'set';
-      data.timestamp = new Date().toISOString();
+    // Remover material
+    document.getElementById("remove-form").addEventListener("submit", async function(e) {
+      e.preventDefault();
+      const payload = {
+        action: "remove",
+        item_code: document.getElementById("remove-code").value.toUpperCase(),
+        quantity: parseInt(document.getElementById("remove-qty").value),
+        last_updated: new Date().toISOString()
+      };
+      await fetch(webhookUrl, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(payload)
+      });
+      alert("✅ Material removido");
+      this.reset();
+    });
 
-      fetch(webhookUrl, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(data)
-      })
-      .then(res => res.ok ? alert('✅ Enviado correctamente') : alert('❌ Error al enviar'))
-      .catch(err => alert('❌ Error de conexión: ' + err.message));
-
-      form.reset();
-    }
+    // Ver inventario (simulado)
+    document.getElementById("view-form").addEventListener("submit", function(e) {
+      e.preventDefault();
+      console.log("👉 Funcionalidad de ver inventario aún no conectada.");
+      alert("Abre la consola del navegador para ver inventario (aún no implementado)");
+    });
   </script>
 </body>
 </html>
