--- a/index.html
+++ b/index.html
@@ -68,13 +68,10 @@
     <form id="add-item-form">
       <label for="item-code">Código</label>
       <input type="text" id="item-code" required>
-
       <label for="item-name">Nombre</label>
       <input type="text" id="item-name" required>
-
       <label for="quantity">Cantidad</label>
       <input type="number" id="quantity" required>
-
       <button type="submit">Guardar</button>
     </form>
   </div>
@@ -84,10 +81,8 @@
     <form id="remove-item-form">
       <label for="remove-code">Código</label>
       <input type="text" id="remove-code" required>
-
       <label for="remove-quantity">Cantidad a remover</label>
       <input type="number" id="remove-quantity" required>
-
       <button type="submit">Remover</button>
     </form>
   </div>
@@ -98,69 +93,86 @@
   </div>
 
   <script>
+    const webhookUrl = 'https://n8n.automatedflow.net/webhook/inventory';
+    const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRHHoSCdpJeKTu5h3h2ys0_b46L-IkRTk29uMS3esVoxpkgJ7Omdc5GSuVsV54JLhxXS-HVDUhoZslw/pub?gid=0&single=true&output=csv';
+
     function showSection(id) {
       document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
       document.getElementById(id).classList.add('active');
     }
 
-    // Mostrar la primera sección por defecto
     showSection('add');
 
-    // Lógica de envío a n8n puede integrarse aquí
+    document.getElementById('add-item-form').addEventListener('submit', async function(e) {
+      e.preventDefault();
+      const data = {
+        action: 'create',
+        item_code: document.getElementById('item-code').value.toUpperCase(),
+        item_name: document.getElementById('item-name').value,
+        quantity: parseInt(document.getElementById('quantity').value)
+      };
+      const res = await fetch(webhookUrl, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data)
+      });
+      if (res.ok) {
+        alert('✅ Material añadido');
+        this.reset();
+      } else {
+        alert('❌ Error al añadir material');
+      }
+    });
+
+    document.getElementById('remove-item-form').addEventListener('submit', async function(e) {
+      e.preventDefault();
+      const data = {
+        action: 'remove',
+        item_code: document.getElementById('remove-code').value.toUpperCase(),
+        quantity: parseInt(document.getElementById('remove-quantity').value)
+      };
+      const res = await fetch(webhookUrl, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data)
+      });
+      if (res.ok) {
+        alert('✅ Material removido');
+        this.reset();
+      } else {
+        alert('❌ Error al remover material');
+      }
+    });
+
+    async function cargarInventario() {
+      const res = await fetch(csvUrl);
+      const text = await res.text();
+      const rows = text.trim().split('\n').map(r => r.split(','));
+      const container = document.getElementById('inventory-list');
+      container.innerHTML = '';
+      const table = document.createElement('table');
+      table.style.borderCollapse = 'collapse';
+      table.style.width = '100%';
+      table.style.marginTop = '1rem';
+      rows.forEach((row, i) => {
+        const tr = document.createElement('tr');
+        row.forEach(cell => {
+          const td = document.createElement(i === 0 ? 'th' : 'td');
+          td.textContent = cell;
+          td.style.border = '1px solid #ccc';
+          td.style.padding = '8px';
+          td.style.backgroundColor = i === 0 ? '#0055aa' : '#f9f9f9';
+          td.style.color = i === 0 ? 'white' : '#000';
+          td.style.textAlign = 'left';
+          tr.appendChild(td);
+        });
+        table.appendChild(tr);
+      });
+      container.appendChild(table);
+    }
+
+    document.querySelector("button[onclick=\"showSection('inventory')\"]")
+      .addEventListener('click', cargarInventario);
   </script>
-  <script>
-  const webhookUrl = 'https://n8n.automatedflow.net/webhook/inventory'; // ✅ Producción
-
-  function showSection(id) {
-    document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-    document.getElementById(id).classList.add('active');
-  }
-
-  showSection('add'); // Mostrar por defecto
-
-  // Añadir Material
-  document.getElementById('add-item-form').addEventListener('submit', async function(e) {
-    e.preventDefault();
-    const data = {
-      action: 'create',
-      item_code: document.getElementById('item-code').value.toUpperCase(),
-      item_name: document.getElementById('item-name').value,
-      quantity: parseInt(document.getElementById('quantity').value)
-    };
-    const res = await fetch(webhookUrl, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(data)
-    });
-    if (res.ok) {
-      alert('✅ Material añadido');
-      this.reset();
-    } else {
-      alert('❌ Error al añadir material');
-    }
-  });
-
-  // Remover Material
-  document.getElementById('remove-item-form').addEventListener('submit', async function(e) {
-    e.preventDefault();
-    const data = {
-      action: 'remove',
-      item_code: document.getElementById('remove-code').value.toUpperCase(),
-      quantity: parseInt(document.getElementById('remove-quantity').value)
-    };
-    const res = await fetch(webhookUrl, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(data)
-    });
-    if (res.ok) {
-      alert('✅ Material removido');
-      this.reset();
-    } else {
-      alert('❌ Error al remover material');
-    }
-  });
-</script>
-
 </body>
 </html>
