--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </div>
 
   <script>
-    const webhookUrl = 'https://n8n.automatedflow.net/webhook-test/inventory';
+    const webhookUrl = 'https://n8n.automatedflow.net/webhook/inventory';
     const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRHHoSCdpJeKTu5h3h2ys0_b46L-IkRTk29uMS3esVoxpkgJ7Omdc5GSuVsV54JLhxXS-HVDUhoZslw/pub?gid=0&single=true&output=csv';
 
     function showSection(id) {
